# thousand-jabs

./: .clang-format  .gitattributes  .gitignore  .pkgmeta  ActionProfileLists-Death_Knight.lua  ActionProfileLists-Demon_Hunter.lua  ActionProfileLists-Druid.lua  ActionProfileLists-Hunter.lua  ActionProfileLists-Mage.lua  ActionProfileLists-Monk.lua  ActionProfileLists-Paladin.lua  ActionProfileLists-Rogue.lua  ActionProfileLists-Warlock.lua  ActionProfileLists-Warrior.lua  ActionProfileLists.lua  ActionProfileLists.xml  Base.lua  Class-DeathKnight.lua  Class-Death_Knight.lua  Class-DemonHunter.lua  Class-Demon_Hunter.lua  Class-Monk.lua  Class-Warrior.lua  Config.lua  Core.lua  Events.lua  Lang-deDE.lua  Lang-enUS.lua  LibProfiling-1.0.lua  LibTableCache-1.0.lua  LibUnitCache-1.0.lua  Main.lua  Module-Profiling.lua  Module-TableCache.lua  Module-UI.lua  Module-UnitCache.lua  Profile-APLParser.lua  Profile-Base.lua  Profile-Common.lua  Profile-DemonHunter.lua  (+26 more)
ActionProfileLists/: ActionProfileLists-Death_Knight.lua  ActionProfileLists-Demon_Hunter.lua  ActionProfileLists-Druid.lua  ActionProfileLists-Hunter.lua  ActionProfileLists-Mage.lua  ActionProfileLists-Monk.lua  ActionProfileLists-Paladin.lua  ActionProfileLists-Priest.lua  ActionProfileLists-Rogue.lua  ActionProfileLists-Shaman.lua  ActionProfileLists-Warlock.lua  ActionProfileLists-Warrior.lua  actions-deathknight.lua  actions-demonhunter.lua  actions-druid.lua  actions-hunter.lua  (+12 more)
Support/DataGenerator/: CMakeLists.txt  extract-methods.sh  main.cpp  simc_copied.cpp  simc_copied.hpp  simc_data.cpp  simc_data.hpp  simc_extracted.inl  simc_provider_alpha.cpp  simc_provider_base.cpp  simc_provider_base.hpp  simc_provider_beta.hpp  simc_provider_live.hpp  simc_provider_ptr.hpp  util.cpp  util.hpp
Support/DataGenerator/old/: main.cpp  util.cpp
WoW7/Support/DataGenerator/: CMakeLists.txt  extract-methods.sh  simc_provider_alpha.hpp  simc_provider_beta.cpp  simc_provider_live.cpp  simc_provider_ptr.cpp
WoW7/Support/DataGenerator/old/: simc_copied.cpp  simc_data.cpp  util.hpp
WoW8-InDev/DataGenerator/: .clang-format  CMakeLists.txt  build.sh  code.patch  code.patch.in  generate.py  tj_hook.cpp  tj_main.cpp  update-simc.sh
(+461 files in other folders)
